--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "ffmpeg": "0.0.4",
-    "opusscript": "0.0.6"
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.28.3"
   }
 }
