--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.4.2",
     "ffmpeg": "0.0.4",
     "opusscript": "0.0.6",
+    "yt-search": "^0.4.1",
     "ytdl-core": "^0.28.3"
   }
 }
